Fixing modal-overlay bleeds, removed bad overflow attribute

--- a/styles/headers.css
+++ b/styles/headers.css
@@ -29,10 +29,6 @@ html {
   font-size: var(--md-text-size);
 }
 
-body {
-  overflow: hidden;
-}
-
 header {
   margin-bottom: 25px;
 }
